[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/themeMFRG.tres" type="Theme" id=1]
[ext_resource path="res://scenes/themeMFRGLabelDark.tres" type="Theme" id=2]
[ext_resource path="res://scripts/main_menu/main_settings.gd" type="Script" id=3]

[node name="ControlSettings" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -576.0
margin_top = -327.0
margin_right = 576.0
margin_bottom = 327.0
theme = ExtResource( 2 )
color = Color( 0, 0, 0, 0.509804 )

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -486.5
margin_top = -299.5
margin_right = 486.5
margin_bottom = 299.5

[node name="LabelResolution" type="Label" parent="CanvasLayer/VBoxContainer"]
margin_right = 973.0
margin_bottom = 39.0
theme = ExtResource( 1 )
text = "LABEL_RESOLUTION"
align = 1
valign = 1

[node name="OptionButton" type="OptionButton" parent="CanvasLayer/VBoxContainer"]
margin_top = 43.0
margin_right = 973.0
margin_bottom = 159.0
theme = ExtResource( 1 )

[node name="LabelHollow" type="Label" parent="CanvasLayer/VBoxContainer"]
margin_top = 163.0
margin_right = 973.0
margin_bottom = 177.0

[node name="LABELSOUND" type="Label" parent="CanvasLayer/VBoxContainer"]
margin_top = 181.0
margin_right = 973.0
margin_bottom = 220.0
theme = ExtResource( 1 )
text = "LABEL_SOUND_MUSIC"
align = 1
valign = 1

[node name="HSlider" type="HSlider" parent="CanvasLayer/VBoxContainer"]
margin_top = 224.0
margin_right = 973.0
margin_bottom = 340.0
theme = ExtResource( 1 )
min_value = -80.0
max_value = 0.0

[node name="LabelHollow2" type="Label" parent="CanvasLayer/VBoxContainer"]
margin_top = 344.0
margin_right = 973.0
margin_bottom = 358.0

[node name="LabelLang" type="Label" parent="CanvasLayer/VBoxContainer"]
margin_top = 362.0
margin_right = 973.0
margin_bottom = 401.0
theme = ExtResource( 1 )
text = "Label_Lang"
align = 1
valign = 1

[node name="ButtonEN" type="Button" parent="CanvasLayer/VBoxContainer"]
margin_top = 405.0
margin_right = 973.0
margin_bottom = 461.0
theme = ExtResource( 1 )
text = "B_Lang_EN"

[node name="ButtonPT" type="Button" parent="CanvasLayer/VBoxContainer"]
margin_top = 465.0
margin_right = 973.0
margin_bottom = 521.0
theme = ExtResource( 1 )
text = "B_Lang_PT_BR"

[node name="LabelHollow3" type="Label" parent="CanvasLayer/VBoxContainer"]
margin_top = 525.0
margin_right = 973.0
margin_bottom = 539.0

[node name="ButtonBack" type="Button" parent="CanvasLayer/VBoxContainer"]
margin_top = 543.0
margin_right = 973.0
margin_bottom = 599.0
theme = ExtResource( 1 )
text = "B_BACK"

[connection signal="item_selected" from="CanvasLayer/VBoxContainer/OptionButton" to="." method="_on_OptionButton_item_selected"]
[connection signal="value_changed" from="CanvasLayer/VBoxContainer/HSlider" to="." method="_on_HSlider_value_changed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/ButtonEN" to="." method="_on_ButtonEN_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/ButtonPT" to="." method="_on_ButtonPT_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/ButtonBack" to="." method="_on_ButtonBack_pressed"]
